objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Content_Version_Legacy_ID__c</fullName>
        <label>Content Version Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Bucket__c</fullName>
        <label>Marketing Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Enablement</fullName>
                    <default>true</default>
                    <label>Sales Enablement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>ASPP</fullName>
                </value>
                <value>
                    <fullName>BOS</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>E2E</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>Optima Live</fullName>
                </value>
                <value>
                    <fullName>Optima Predict</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PAS</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>RCM</fullName>
                </value>
                <value>
                    <fullName>RCM+</fullName>
                </value>
                <value>
                    <fullName>RIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Competitive Intel</fullName>
                </value>
                <value>
                    <fullName>PowerPoint</fullName>
                </value>
                <value>
                    <fullName>Research Industry Generated</fullName>
                </value>
                <value>
                    <fullName>Research R1 Originated</fullName>
                </value>
                <value>
                    <fullName>Sell Sheet Brochure</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>HB - Anesthesia</fullName>
                </value>
                <value>
                    <fullName>HB - Emergency Dept</fullName>
                </value>
                <value>
                    <fullName>HB - Hospitalist</fullName>
                </value>
                <value>
                    <fullName>IDN</fullName>
                </value>
                <value>
                    <fullName>OB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>